fixed links font-size on small screens

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -6,6 +6,9 @@ footer {
         }
         dd {
             white-space: nowrap;
+            @include media-breakpoint-down(sm) {
+                font-size: .875rem;
+            }
         }
     }
 }
